--- a/Compte-Rendu/aide-decision.tex
+++ b/Compte-Rendu/aide-decision.tex
@@ -16,6 +16,7 @@
 \usepackage[normalem]{ulem}
 \usepackage{fullpage}
 \usepackage{graphicx}
+\usepackage{tikz}
 
 \newcommand*\tick{\item[\Checkmark]}
 \newcommand*\fail{\item[\XSolidBrush]}
@@ -672,25 +673,44 @@ Nous avons par la suite déroulé la méthode Electre I dans deux cas différent
 \item En pondérant chacun des critères.
 \end{itemize}
 \subsection{Analyse sans pondération des critères}
-Nous obtenons les matrices de concordance et discordance suivante :
-\begin{align*}
-M_{concordance} =
- \begin{pmatrix}
-  X	&3	&3	&3	&3\\
-  1	&X	&2	&3	&2\\
-  2	&2	&X  &2	&3\\
-  1	&3	&2	&X	&2\\
-  2	&2	&3	&2	&X\\
- \end{pmatrix}& \quad
- M_{discordance} =
- \begin{pmatrix}
-  X	&4	&2	&4	&2\\
-  2	&X	&3	&6	&1\\
-  3	&4	&X	&5	&2\\
-  2	&6	&3	&X	&4\\
-  3	&2	&2	&5	&X\\
- \end{pmatrix}
-\end{align*}
+Nous obtenons les matrices de concordance (C) et discordance (D) suivante : \\
+\begin{minipage}{0.45\textwidth}
+C = $\frac{1}{4}$*\bordermatrix{~ & a & b & d & e & h \cr
+                  a & - & 3 & 3 & 3 & 3 \cr
+                  b & 1 & - & 2 & 3 & 2 \cr
+                  d & 2 & 2 & - & 2 & 3 \cr
+                  e & 1 & 3 & 2 & - & 2 \cr
+                  h & 2 & 2 & 3 & 2 & - \cr}
+\end{minipage}
+~
+\begin{minipage}{0.45\textwidth}
+D = $\frac{1}{10}$*\bordermatrix{~ & a & b & d & e & h \cr
+                  a & - & 4 & 2 & 4 & 2 \cr
+                  b & 2 & - & 3 & 6 & 1 \cr
+                  d & 3 & 4 & - & 5 & 2 \cr
+                  e & 2 & 6 & 3 & - & 4 \cr
+                  h & 3 & 2 & 2 & 5 & - \cr}
+\end{minipage}\\[0.5cm]
+En nous basant sur ces matrices et en fixant différents seuils de concordance(s)/discordance, nous traçons les graphes de surclassement suivants :\\ Z! Ceci est un example FAUX, qui sert de modèle pour tracer les graphes en LaTeX Z!\\
+\vspace{10pt}
+\fbox{\begin{minipage}{0.3\textwidth}
+$C_1=\frac{3}{4}$; $C_2=\frac{2}{10}$ \\
+\begin{tikzpicture}[->,auto,node distance=1.5cm,thick,
+   mauvaise action/.style={font=\sffamily\Large\bfseries},
+   bonne action/.style={circle,draw,font=\sffamily\Large\bfseries}]
+
+  \node[bonne action] (a) {a};
+  \node[bonne action](b) [below right of=a] {b};
+  \node[mauvaise action] (d) [below of=b] {d};
+  \node[mauvaise action] (h) [below left of=a] {h};
+  \node[bonne action] (e) [below of=h] {e};
+
+  \foreach \from/\to in {a/d,a/h,h/d} \draw (\from) -- (\to);
+\end{tikzpicture}\\
+\centering
+ensemble des meilleures actions potentielles = \{a,b,e\}
+\end{minipage}}
+~
 \subsection{Analyse avec pondération des critères} 
 Nous avons ensuite attribué un poids à chacun de ces critères en jugeant de leur importance relative. Nous privilégions principalement le bénéfice (raison d'être de l'entreprise). Nous avons ensuite décider de pondérer de la même manière les critères 2 et 3, que nous jugeons de même importance. Quant au critère 4, nous le considérons comme le moins important, les opérateurs pouvant être formés à l'utilisation de ces machines.
 Pour notre analyse, nous avons réévalué les notes de chaque critère afin de correspondre à une échelle plus adaptée. Nous obtenons donc une nouvelle matrice de jugements, ainsi que de nouvelles matrices de concordance et de discordance, sans les propositions dominées \textbf{\emph{c}}, \textbf{\emph{g}} et \textbf{\emph{f}} :
